@@ -273,3 +273,5 @@ in 0.1.13.
 - BREAKING CHANGE: `objective.model.logp` and `Objective.logp_extra` are now
   included in the log-likelihood (`Objective.logl`) instead of log-prior
   (`Objective.logp`). This makes it easier to work with pymc3 and dynesty.
+- Add `Objective.prior_transform` that converts random variates in a unit
+  hypercube to parameter values, according to their prior distributions.
